--- a/project.config.json
+++ b/project.config.json
@@ -3,11 +3,12 @@
 	"setting": {
 		"urlCheck": false,
 		"es6": false,
-		"postcss": false,
-		"minified": false,
+		"postcss": true,
+		"minified": true,
 		"newFeature": true,
-		"coverView": true,
 		"autoAudits": false,
+		"uglifyFileName": true,
+		"coverView": true,
 		"checkInvalidKey": true,
 		"checkSiteMap": true,
 		"uploadWithSourceMap": true,
